[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/thrust.png" type="Texture" id=3]
[ext_resource path="res://Player/hit.png" type="Texture" id=4]
[ext_resource path="res://Player/explosion.png" type="Texture" id=5]
[ext_resource path="res://Player/Coin3.ogg" type="AudioStream" id=6]
[ext_resource path="res://Player/Hit4.ogg" type="AudioStream" id=7]
[ext_resource path="res://Player/Explosion2.ogg" type="AudioStream" id=8]
[ext_resource path="res://Player/Lose2.ogg" type="AudioStream" id=9]
[ext_resource path="res://Player/214663__hykenfreak__deep-space-ship-effect.ogg" type="AudioStream" id=10]

[sub_resource type="CircleShape2D" id=5]
radius = 28.4573

[sub_resource type="CircleShape2D" id=6]
radius = 32.3418

[sub_resource type="Animation" id=4]
resource_name = "destruction"
tracks/0/type = "value"
tracks/0/path = NodePath("explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("hit:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hit:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 236.774, 538.123 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="." groups=[
"player",
]]
collision_layer = 3
collision_mask = 3

[node name="Collision" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.641541, 0 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="thrust" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.901961 )
position = Vector2( -0.0326233, 40.5587 )
scale = Vector2( 0.497075, 0.497075 )
texture = ExtResource( 3 )

[node name="player" type="Sprite" parent="."]
position = Vector2( -0.358521, 0 )
scale = Vector2( 0.780129, 0.780129 )
texture = ExtResource( 1 )

[node name="Reloader" type="Timer" parent="."]
one_shot = true

[node name="hit" type="Sprite" parent="."]
visible = false
modulate = Color( 0.713726, 0.152941, 0.152941, 1 )
scale = Vector2( 1.57268, 1.57268 )
texture = ExtResource( 4 )
hframes = 6

[node name="explosion" type="Sprite" parent="."]
visible = false
modulate = Color( 0.713726, 0.152941, 0.152941, 1 )
scale = Vector2( 2.13926, 2.13926 )
texture = ExtResource( 5 )
hframes = 8

[node name="animation" type="AnimationPlayer" parent="."]
anims/destruction = SubResource( 4 )
anims/hit = SubResource( 3 )

[node name="EnergyPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="HitPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="DestroyedPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="EnergyLosePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -8.0

[node name="ThrustPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Reloader" to="." method="_on_Reloader_timeout"]
